--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/scott/Documents/extlibs/slick-util.jar"/>
-	<classpathentry kind="lib" path="/home/scott/Documents/extlibs/lwjgl-2.9.0/jar/lwjgl.jar">
+	<classpathentry kind="lib" path="D:/Documents/extLibs/slick-util.jar"/>
+	<classpathentry kind="lib" path="D:/Documents/extLibs/lwjgl-2.9.0/jar/lwjgl.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/scott/Documents/extlibs/lwjgl-2.9.0/native/linux"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="D:/Documents/extLibs/lwjgl-2.9.0/native/windows"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
